--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     </nav>
 
     <div class="container py-4 py-xl-5">
+      <h4 class="text-light" id="txtInstructions">El juego comenzará cuando se conecte un segundo jugador</h4>
       <div class="row">
         <div class="col">
           <div class="row py-3 tetris">
